Melhoria no processo de criação de Dias, Feriados e Link e Unlink Tags, melhoria nas consultas e removendo metodos não utilizados.